Stylesheet/emote/tag updates 2013-05-12

--- a/source-css/anotherponymotessub.css
+++ b/source-css/anotherponymotessub.css
@@ -228,3 +228,43 @@ Width: 200px;
 Height: 266px;
 background-image: url(%%derpyfilly%%) !important
 }
+
+a[href="/idea"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 70px;
+Height: 70px;
+background-image: url(%%idea%%) !important
+}
+
+a[href="/pinkieidea"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 70px;
+Height: 70px;
+background-image: url(%%pinkieidea%%) !important
+}
+
+a[href="/willmurder"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 70px;
+Height: 68px;
+background-image: url(%%willmurder%%) !important
+}
+
+a[href="/doublehug"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 200px;
+Height: 202px;
+background-image: url(%%doublehug%%) !important
+}
