--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -42,7 +42,7 @@ div.titlebox span.number:after {
 content: " Hella Man Pregnant Pegasi"  
 }
 
-
+/*emotes*/
 a[href|="/dyel"], a[href|="/darnsquids"], a[href|="/hcstare"], a[href|="/soweak"], a[href|="/twibedroomeyes"], a[href|="/momss"], a[href|="/scootahelm"], a[href|="/qtmark"], a[href|="/fruitamad"], a[href|="/pokerscratch"], a[href|="/dyer"], a[href|="/angryfrog"] {
     display: block;
     clear: none;
@@ -485,12 +485,12 @@ a[href|="/pantschwitz"] {
     height: 150px;
     background-image: url(%%pantschwitz%%) }
 
-a[href|="/niggerdicksinfluttershysanus"] {
+a[href|="/niggerdicksinfluttershysanus"], a[href|="/breadsticksinfluttershysanus"]  {
     display: block;
     clear: none;
     float: left;
     width: 98px;
-    height: 150px;
+    height: 83px;
     background-image: url(%%qVT5qQv%%) }
 
 a[href|="/rdjam"] {
