--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -169,8 +169,8 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  clear:both;
  text-align:center;
  width:100%;
-/*Googly Belle by MasterSubLink*/
- background-image:url(%%sbstare-googly%%);
+/*Discombobulated Belle by /u/clap2times*/
+ background-image:url(%%discombobulated-belle%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
