--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -54,7 +54,7 @@ body, body.res-nightmode:first-of-type {
     }
 #header-img {
     vertical-align: bottom;
-    margin: 10px 0;
+    margin: 0px 0;
 }
 
 /* Name Change */
@@ -115,7 +115,7 @@ body > .content:before{
 
 .side .md h6 {
     position: absolute;
-    top: 153px;
+    top: 133px;
     left: 80px;
     z-index: 100;
     background: #CCC;
@@ -418,7 +418,7 @@ a.author[href$="Broken_Wagonwheel"]:after
 
 
 /*Extra text here, add spaces so it looks nice*/
-a.author[href$="Sangfroidish"]:after { content:" Shoehorn Sexpert "}
+a.author[href$="Sangfroidish"]:after { content:" Lost his personal divining rod "}
 a.author[href$="sna_fu_bar"]:after {content:" Sneaky squid "}
 a.author[href$="DoomedCivilian"]:after { content:" CSS Breaker "}
 a.author[href$="Draze"]:after { content: " Giddy Up "}
