--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -105,12 +105,12 @@ font-size: 0 !important;
 
 /***********Replacements***********/
 a.author[href$=hell00001]:before {
-    content: "Mango12";
+    content: "CaptainMango12";
     font-size: 12px;
     }
 
 a.author[href$=butterfilly]:before {
-    content: "Mango1";
+    content: "CaptainMango1";
     font-size: 12px;
     }
 
@@ -130,7 +130,7 @@ a.author[href$=V17Ds]:before {
     }
 
 a.author[href$=Captain_Awesomex]:before {
-    content: "Avocado-Fucker";
+    content: "CaptainAvocado-Fucker";
     font-size: 12px;
     }
 
@@ -262,11 +262,11 @@ a[href|="/lunacheer"] { background-position: -0px -417px; width: 200px; height: 
 a[href|="/rawrr"] { background-position: -0px -613px; width: 170px; height: 171px; }
 a[href|="/mcoolstorybro"] { background-position: -0px -784px; width: 200px; height: 164px; }
 
-a[href|="/partytime"], a[href|="/mrapidfire"], a[href|="/imgonnacry"], a[href|="/insidecelestia"], a[href|="/thisjustin"], a[href|="/queencadance"] {
+a[href|="/partytime"], a[href|="/mrapidfire"], a[href|="/imgonnacry"], a[href|="/insidecelestia"], a[href|="/thisjustin"], a[href|="/queencadance"], a[href|="/derpyjuice"], a[href|="/sadluna"], a[href|="/vinylcheer"], a[href|="/lunalaugh"], a[href|="/lunathis"], a[href|="/ceilingdash"], a[href|="/royalhug"], a[href|="/lunagazing"], a[href|="/lyranotsure"], a[href|="/derpyhug"] {
      display: block;
      clear: none;
      float: left;
-     background-image: url(%%otherspritesheet5%%) !important
+     background-image: url(%%emotesheetnumberhere%%) !important
      }
 
 a[href|="/partytime"] { background-position: -0px -0px; width: 157px; height: 200px; }
@@ -275,17 +275,32 @@ a[href|="/imgonnacry"] { background-position: -0px -392px; width: 200px; height:
 a[href|="/insidecelestia"] { background-position: -0px -560px; width: 250px; height: 143px; }
 a[href|="/thisjustin"] { background-position: -0px -703px; width: 100px; height: 84px; }
 a[href|="/queencadance"] { background-position: -0px -787px; width: 150px; height: 146px; }
+a[href|="/derpyjuice"] { background-position: -0px -933px; width: 114px; height: 150px; }
+a[href|="/sadluna"] { background-position: -0px -1083px; width: 150px; height: 146px; }
+a[href|="/vinylcheer"] { background-position: -0px -1229px; width: 150px; height: 136px; }
+a[href|="/lunalaugh"] { background-position: -0px -1365px; width: 150px; height: 134px; }
+a[href|="/lunathis"] { background-position: -0px -1499px; width: 150px; height: 134px; }
+a[href|="/ceilingdash"] { background-position: -114px -933px; width: 110px; height: 118px; }
+a[href|="/royalhug"] { background-position: -0px -1633px; width: 150px; height: 104px; }
+a[href|="/lunagazing"] { background-position: -0px -1737px; width: 150px; height: 101px; }
+a[href|="/lyranotsure"] { background-position: -150px -1083px; width: 71px; height: 100px; }
+a[href|="/derpyhug"] { background-position: -0px -1838px; width: 150px; height: 99px; }
 
 
-a[href|="/hasanyonereallybeenfarevenasdecidedtouseevengowanttodolookmorelike"], a[href|="/whywouldyoudothat"] {
+a[href|="/hasanyonereallybeenfarevenasdecidedtouseevengowanttodolookmorelike"], a[href|="/whywouldyoudothat"], a[href|="/actuallypinkiepie"], a[href|="/queenbutt"], a[href|="/jewpony"], a[href|="/rainbowdavid"], a[href|="/raribellejew"] {
      display: block;
      clear: none;
      float: left;
-     background-image: url(%%otherspritesheet6%%) !important
+     background-image: url(%%otherspirtesheet6%%) !important
      }
 
 a[href|="/hasanyonereallybeenfarevenasdecidedtouseevengowanttodolookmorelike"] { background-position: -0px -0px; width: 156px; height: 250px; }
 a[href|="/whywouldyoudothat"] { background-position: -0px -250px; width: 200px; height: 185px; }
+a[href|="/actuallypinkiepie"] { background-position: -0px -435px; width: 130px; height: 201px; }
+a[href|="/queenbutt"] { background-position: -0px -636px; width: 200px; height: 197px; }
+a[href|="/jewpony"] { background-position: -0px -833px; width: 150px; height: 184px; }
+a[href|="/rainbowdavid"] { background-position: -0px -1017px; width: 150px; height: 150px; }
+a[href|="/raribellejew"] { background-position: -0px -1167px; width: 250px; height: 131px; }
 
 a[href|="/minisexualhealing"] {
      display: block;
