--- a/source-css/onetrueprincess.css
+++ b/source-css/onetrueprincess.css
@@ -384,11 +384,11 @@ a[href|='/flimandflam3']{ background-position: -150px -222px; width: 150px; heig
 a[href|='/fireflies']{ background-position: -0px -1574px; width: 200px; height: 57px; }
 
 
-a[href|='/plounge']{
+a[href|='/juice']{
     display: block;
     clear: none;
     float: left;
     background-image: url(%%lunajuice%%)
     }
 
-a[href|='/plounge']{ background-position: -0px -0px; width: 962px; height: 985px; }
+a[href|='/juice']{ background-position: -0px -0px; width: 962px; height: 985px; }
