--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -553,6 +553,63 @@ a[href|="/pinkbie"] {
     height: 150px;
     background-image: url(%%pinkbie%%) 
     }
+a[href|="/willy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 149px;
+    height: 150px;
+    background-image: url(%%willy%%) 
+    }
+a[href|="/lyraflutterhug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 145px;
+    background-image: url(%%lyraflutterhug%%) 
+    }
+a[href|="/flutterproud"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 145px;
+    height: 150px;
+    background-image: url(%%flutterproud%%) 
+    }
+a[href|="/rarishyhug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 150px;
+    background-image: url(%%rarishyhug%%) 
+    }
+a[href|="/af1"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 104px;
+    background-image: url(%%af1%%) 
+    }
+a[href|="/af2"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 102px;
+    background-image: url(%%af2%%) 
+    }
+a[href|="/af3"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 104px;
+    background-image: url(%%af3%%) 
+    }
+
 
 
 /*Side Bar*/
