--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -879,6 +879,14 @@ a[href|="/cheeriwaitwhat"] {
     height: 165px;
     background-image:url(%%cheeriwaitwhat%%)
     }
+a[href|="/seriouslydominanttrixie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 209px;
+    height: 139px;
+    background-image:url(%%archiehatakutie%%)
+    }
 a[href|="/seriouslyhappy"] {
     width: 137px;
     background-position: -0px -0px
