--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -490,6 +490,26 @@ width: 312px;
 background-position: -677px -0px
 }
 
+a[href|="/tacochill"], a[href|="/scrunchietaco"] {  
+
+height: 300px;
+display: block;
+clear: none;
+float: left;
+background-image: url(%%tacoemotes%%)
+}
+
+a[href|="/tacochill"] {
+
+width: 240px;
+background-position: -0px -0px
+}
+
+a[href|="/scrunchietaco"] {
+
+width: 309px;
+background-position: -240px -0px
+}
 /* ----------- Name Change ---------------- */
 
 
