--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -1,11 +1,6 @@
 /*check out our awesome code that totally wasn't taken from /r/mylittlepony at all*/
 /*Special thanks to RDJ for helping me figure out what I did wrong with the emotes*/
 
-/*Note: Apparently we're limited to 50 images only and we have now hit the cap*/
-/*So any animated emotes should go to r/tbpimagedump -smashblu*/
-
-/* psh, /r/mylittlepony has ASCII art, why can't we? oh right, because I can't get any....*/
-/* Takes up too much room :( */
 /* Oh hai, Knockerspaniel!*/
 /*******
 *Header*
@@ -147,7 +142,7 @@ html:lang(nv) .side p a[href="http://nv.reddit.com/r/TheBestPony/"] {
     display: inline-block;
     width: 16px;
     height: 16px
-    }
+    }	
 .flair-at {
     background-position: 0px 0px
     }
@@ -1143,7 +1138,7 @@ a[href|="/rbpd29"], a[href|="/ryuno"] {
     background-position: -350px -630px
     }
 /*BPD2 emutes*/
-a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"],  a[href|="/bpd34"], a[href|="/rbpd34"], a[href|="/sbshake"], a[href|="/rsbshake"], a[href|="/bpd35"], a[href|="/rbpd35"], a[href|="/babssmirk"], a[href|="/rbabssmirk"], a[href|="/bpd36"], a[href|="/rbpd36"], a[href|="/trixieomg"], a[href|="/rtrixieomg"] {
+a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"],  a[href|="/bpd34"], a[href|="/rbpd34"], a[href|="/sbshake"], a[href|="/rsbshake"], a[href|="/bpd35"], a[href|="/rbpd35"], a[href|="/babssmirk"], a[href|="/rbabssmirk"], a[href|="/bpd36"], a[href|="/rbpd36"], a[href|="/trixieomg"], a[href|="/rtrixieomg"], a[href|="/twilove"], a[href|="/rtwilove"] {
     display: block; 
     clear: none;
     float: left;
@@ -1192,6 +1187,12 @@ a[href|="/bpd36"], a[href|="/trixieomg"] {
     }
 a[href|="/rbpd36"], a[href|="/rtrixieomg"] {
     background-position: -210px -420px
+    }
+a[href|="/bpd37"], a[href|="/twilove"] {
+    background-position: -0px -490px
+    }
+a[href|="/rbpd37"], a[href|="/rtwilove"] {
+    background-position: -210px -490px
     }
 /*BPE emutes*/
 a[href|="/bpe00"], a[href|="/bpe01"], a[href|="/bpe02"], a[href|="/bpe03"], a[href|="/bpe04"], a[href|="/bpe05"], a[href|="/bpe06"], a[href|="/bpe07"], a[href|="/bpe08"], a[href|="/bpe09"], a[href|="/bpe10"], a[href|="/bpe11"], a[href|="/bpe12"], a[href|="/bpe13"], a[href|="/bpe14"], a[href|="/bpe15"], a[href|="/bpe16"], a[href|="/bpe17"], a[href|="/bpe18"], a[href|="/bpe19"], a[href|="/bpe20"], a[href|="/bpe21"], a[href|="/bpe22"], a[href|="/bpe23"], a[href|="/bpe24"], a[href|="/bpe25"], a[href|="/bpe26"], a[href|="/bpe27"], a[href|="/bpe28"], a[href|="/bpe29"], a[href|="/hairity"], a[href|="/ajnervous"], a[href|="/ajderp"], a[href|="/birdnest"], a[href|="/derpyiscanon"], a[href|="/fsexcite"], a[href|="/fssmile"], a[href|="/hiya"], a[href|="/kwuala"], a[href|="/lyraaaa"], a[href|="/rdweep"], a[href|="/rdcat"], a[href|="/rarage"], a[href|="/pphop"], a[href|="/nyx"], a[href|="/nyomnyom"], a[href|="/necklejack"], a[href|="/myaah"], a[href|="/waffleheart"], a[href|="/woona"], a[href|="/watchout"], a[href|="/twiyum"], a[href|="/twipillow"], a[href|="/twiokie"], a[href|="/tellme"], a[href|="/sweetiebot"],a[href|="/spiderity"], a[href|="/rdrage"], a[href|="/rdjoy"], a[href|="/noname"], a[href|="/rbpe00"], a[href|="/rbpe01"], a[href|="/rbpe02"], a[href|="/rbpe03"], a[href|="/rbpe04"], a[href|="/rbpe05"], a[href|="/rbpe06"], a[href|="/rbpe07"], a[href|="/rbpe08"], a[href|="/rbpe09"], a[href|="/rbpe10"], a[href|="/rbpe11"], a[href|="/rbpe12"], a[href|="/rbpe13"], a[href|="/rbpe14"], a[href|="/rbpe15"], a[href|="/rbpe16"], a[href|="/rbpe17"], a[href|="/rbpe18"], a[href|="/rbpe19"], a[href|="/rbpe20"], a[href|="/rbpe21"], a[href|="/rbpe22"], a[href|="/rbpe23"], a[href|="/rbpe24"], a[href|="/rbpe25"], a[href|="/rbpe26"], a[href|="/rbpe27"], a[href|="/rbpe28"], a[href|="/rbpe29"], a[href|="/rhairity"], a[href|="/rajnervous"], a[href|="/rajderp"], a[href|="/rbirdnest"], a[href|="/rderpyiscanon"], a[href|="/rfsexcite"], a[href|="/rfssmile"], a[href|="/rhiya"], a[href|="/rkwuala"], a[href|="/rlyraaaa"], a[href|="/rrdweep"], a[href|="/rrdcat"], a[href|="/rrarage"], a[href|="/rpphop"], a[href|="/rnyx"], a[href|="/rnyomnyom"], a[href|="/rnecklejack"], a[href|="/rmyaah"], a[href|="/rwaffleheart"], a[href|="/rwoona"], a[href|="/rwatchout"], a[href|="/rtwiyum"], a[href|="/rtwipillow"], a[href|="/rtwiokie"], a[href|="/rtellme"], a[href|="/rsweetiebot"],a[href|="/rspiderity"], a[href|="/rrdrage"], a[href|="/rrdjoy"], a[href|="/rnoname"] {
@@ -2402,6 +2403,17 @@ a[href|="/areyounuts"] {
     }
 a[href|="/areyounuts"] {
     background-position: -468px -385px
+    }
+a[href|="/manliestherowithnotesticles"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%secretemotes%%)
+    }
+a[href|="/manliestherowithnotesticles"] {
+    background-position: -573px -0px
     }
 a[href|="/emyscoot"] {
     display: block;
