--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -725,7 +725,7 @@ a[href|='/vsheh'],a[href|='/vs29'] {width:67px; height:80px;background-position:
 a[href|='/vsyes'],a[href|='/vs2a'] {width:70px; height:73px;background-position: 0px -765px}
 
 
-a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vsdontask'],a[href|='/modstar'],a[href|='/vssmile'],a[href|='/vsdrunk'],a[href|='/vshipster'],a[href|='/vstiredofyourshit'],a[href|='/goddammitjoker'],a[href|='/vspride'],a[href|='/vsproud'],a[href|='/vscuter'],a[href|='/vswoah'],a[href|='/vshotdamn'],a[href|='/vsdance3'],a[href|='/vsno'],a[href|='/vsermergerd'],a[href|='/vswatching'],a[href|='/vscrazed'],a[href|='/vsweegee'],a[href|='/weegee'],a[href|='/vsblush'],a[href|='/vsorly'],a[href|='/vs2g'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'],a[href|='/vs2e'],a[href|='/vs1e'],a[href|='/vs0e'],a[href|='/vs0f'],a[href|='/vs1f'],a[href|='/vs2f'],a[href|='/vs0g'],a[href|='/vs1g'] {
+a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vsdontask'],a[href|='/modstar'],a[href|='/vssmile'],a[href|='/vsdrunk'],a[href|='/vshipster'],a[href|='/vstiredofyourshit'],a[href|='/goddammitjoker'],a[href|='/vspride'],a[href|='/vsproud'],a[href|='/vscuter'],a[href|='/vswoah'],a[href|='/vshotdamn'],a[href|='/vsdance3'],a[href|='/vsno'],a[href|='/vsermergerd'],a[href|='/vswatching'],a[href|='/vscrazed'],a[href|='/vsweegee'],a[href|='/weegee'],a[href|='/vsblush'],a[href|='/vsorly'],a[href|='/vsohhaithere'],a[href|='/vsraggle'],a[href|='/vsyay'],a[href|='/vs0h'],a[href|='/vs2g'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'],a[href|='/vs2e'],a[href|='/vs1e'],a[href|='/vs0e'],a[href|='/vs0f'],a[href|='/vs1f'],a[href|='/vs2f'],a[href|='/vs0g'],a[href|='/vs1g'] {
     display: block;
     clear: none;
     float: left;
@@ -755,6 +755,7 @@ a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vs0e'] {background-image: url(%%
 a[href|='/vshipster'],a[href|='/vs0e'] {background-image: url(%%vssheet2%%);width:70px; height:72px; background-position: -370px -71px}
 a[href|='/vspride'],a[href|='/vsproud'],a[href|='/vs0f'] {background-image: url(%%vssheet2%%);width:70px; height:76px; background-position: -370px -284px}
 a[href|='/vswatching'],a[href|='/vs0g'] {background-image: url(%%vssheet2%%);width:70px; height:49px; background-position: -370px -361px}
+a[href|='/vsohhaithere'],a[href|='/vsraggle'],a[href|='/vsyay'],a[href|='/vs0h'] {background-image: url(%%vssheet2%%);width:70px; height:61px; background-position: -370px -896px}
 
 /* 1 Column */
 a[href|='/vsfacehoof'],a[href|='/vs1c'] {background-image: url(%%vssheet2%%);width:70px; height:71px;background-position: -300px 0px}
