--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -871,6 +871,7 @@ a[href='/sp'] { display: inline-block; padding-right: 100%; }
 
 
 /* Replacing somebody's name? Add it to the list here. */
+a.author[href$="-20"],
 a.author[href$="numberlock"],
 a.author[href$="CodenameToon"],
 a.author[href$="thedarklordkyp"],
@@ -964,6 +965,7 @@ content: "";
 }
 
 /* Replacing somebody's name? Add it to the list here too. */
+a.author[href$="-20"]:before,
 a.author[href$="CodenameToon"]:before,
 a.author[href$="numberlock"]:before,
 a.author[href$="thedarklordkyp"]:before,
@@ -1059,6 +1061,7 @@ visibility:visible!important;
     content:"Princess "
     }*/
 a.author[href$="CodenameToon"]:before {content:"Coggler"}
+a.author[href$="-20"]:before {content:"“just a douchebag”"}
 a.author[href$="numberlock"]:before {content:"BeerPony"}
 a.author[href$="thedarklordkyp"]:before {content:"A_Drunk_Changeling"}
 a.author[href$="fwinest_JediThug"]:before {content:"Wincest_JediThug"}
